# visu3d

./: CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: publish.yml  pytest_and_autopublish.yml
docs/: conf.py  dataclass.ipynb  index.md  transform.ipynb
visu3d/: __init__.py  array_dataclass.py  array_dataclass_test.py  import_test.py  ops.py  shape_grammar.lark  shape_parsing.py  shape_parsing_test.py  testing.py  type_parsing.py  type_parsing_test.py  typing.py  vectorization.py  vectorization_test.py
visu3d/dc_arrays/: camera.py  camera_spec.py  camera_spec_test.py  camera_test.py  point.py  point_test.py  ray.py  ray_test.py  transformation.py  transformation_test.py
visu3d/math/: __init__.py  coord_utils.py  coord_utils_test.py  interp_utils.py  interp_utils_test.py  math_utils.py  rotation_utils.py  rotation_utils_test.py
visu3d/plotly/: __init__.py  auto_plot.py  auto_plot_test.py  fig_config_utils.py  fig_utils.py  fig_utils_test.py  traces_builder.py
visu3d/utils/: __init__.py  file_utils.py  inspect_utils.py  inspect_utils_test.py  lazy_imports.py  lazy_imports_test.py  np_utils.py  np_utils_test.py  py_utils.py  py_utils_test.py  rotation_utils.py  rotation_utils_test.py  tree_utils.py  tree_utils_test.py
