[project]
name = "visu3d"
description = "3d geometry made easy."
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE"}
authors = [{name = "Visu3d team", email="visu3d@google.com"}]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "License :: OSI Approved :: Apache Software License",
    # Note: Python and license automatically added by some tools
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Visualization",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = [
    "3d",
    "visu3d",
    "visualization",
    "neural rendering",
    "nerf",
]

dependencies = [
    "dataclass_array",
    "einops",
    # If modifying this, also modify `pytest_and_autopublish.yml`
    "etils[edc,enp,epath,epy,etree]",
    "numpy",
    "typing_extensions",
]

# This is set automatically by flit using `etils.__version__`
dynamic = ["version"]

[project.urls]
homepage = "https://github.com/google-research/visu3d"
repository = "https://github.com/google-research/visu3d"
documentation = "https://visu3d.readthedocs.io"
changelog = "https://github.com/google-research/visu3d/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
    "pytest>=3.4",
    "pytest-xdist",
    # Development deps (linting, formating,...)
    "pylint>=2.6.0",
    "pyink",
    # Lazy deps
    "chex",
    "jax[cpu]",
    "jupyter",
    "tf-nightly",
    "tensorflow_datasets",
    "torch",
    "plotly",
    "scipy",
]
docs = [
    "sphinx-apitree[ext]",
    "visu3d[dev]",  # Install lazy deps
    "scipy>=1.10",
]

[tool.pyink]
# Formatting configuration to follow Google style-guide
line-length = 80
preview = true
pyink-indentation = 2
pyink-use-majority-quotes = true

[build-system]
requires = ["flit_core >=3.8,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.sdist]
exclude = [
  # Do not release tests files on PyPI
  "**/*_test.py",
]
